Revision history for Devel-TraceUse

2.094 2015-09-?? BOOK
    - Tweaked formatting of this file as per CPAN::Changes::Spec,
      in the process ensuring all dates are UTC (like CPAN & PAUSE).

2.093 2014-06-26 BOOK
    - fixed the test script to properly deal with sitecustomize and proxies
      in all possible combinations (thanks a lot to Christan Walde (MITHALDU)
      for his help with testing under Windows!)

2.092 2014-04-03 BOOK
    - auto-dereferencing only works since 5.14
    - move the xt/ tests back in t/, guarded by RELEASE_TESTING

2.091 2014-03-29 BOOK
    - documentation fixes (thanks to Ioan Rogers (IOANR))
    - test fixes (related to Module::CoreList)

2.09 2013-02-16 BOOK
    - added a proxy-reporting feature, that lists modules/subroutines
      found to load other modules --but no change to the tree output yet--
      (thanks to Olivier Mengué (DOLMEN))

2.08 2012-09-13 BOOK
    - fixed the module's encoding to match the =encoding POD directive

2.07 2012-09-13 BOOK
    - Added support for "perl -c": dump tree at CHECK phase if -c is set
      (contributed by Olivier Mengué (DOLMEN))

2.06 2012-01-14 BOOK
    No code change, but:
    - More thoroughly remove @INC from the error output
    - do not open output test files as utf8
    - fix a warning when using a dev version of Module::CoreList

2.05 2011-04-18 BOOK
    - new 'output' option to redirect TraceUse result to a file
      (fully implemented by Olivier Mengué (DOLMEN) at the Perl QA
      Hackathon 2011)

2.04 2011-04-16 BOOK
    - use ${"$package\::VERSION"} instead of $package->VERSION to
      avoid the validation in ->VERSION to choke on modules using
      base.pm (RT #65284)

2.03 2010-09-21 BOOK
    - The 'hidecore' option will hide core modules in the output
      (initial patch by David Leadbeater)
    - moved author tests to xt/

2.02 2010-07-07 BOOK
    - Added the module version (if available) to the output
    - Improved test suite for Win32 and sitecustomize.pl
